Working with fingerprint

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,6 +90,7 @@
     </div>
   </div>
 
+  <script src="js/fingerprint-scanner.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
