--- a/frontend/register.html
+++ b/frontend/register.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register User - Biometric Authentication System</title>
   <link rel="stylesheet" href="css/styles.css">
+  <script src="js/fingerprint-scanner.js"></script>
 </head>
 <body id="registration-page">
   <div id="alert-container" style="position: fixed; top: 20px; right: 20px; z-index: 9999;"></div>
