--- a/frontend/capture.html
+++ b/frontend/capture.html
@@ -215,6 +215,7 @@
     </main>
   </div>
 
+  <script src="js/fingerprint-scanner.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
