--- a/frontend/security.html
+++ b/frontend/security.html
@@ -108,7 +108,7 @@
               <h4 style="margin-bottom: 15px; font-weight: 600; color: var(--text-primary);">Biometric Template Encryption</h4>
               <ul style="list-style: none; font-size: 13px; color: var(--text-secondary); line-height: 2;">
                 <li>✅ AES-256 encryption for stored templates</li>
-                <li>✅ SHA-512 hashing for fingerprint patterns</li>
+                <li>✅ SHA-256 hashing for fingerprint patterns</li>
                 <li>✅ Salt-based authentication tokens</li>
                 <li>✅ Zero-knowledge proof implementation</li>
                 <li>✅ Template rotation every 90 days</li>
@@ -234,7 +234,7 @@
               <div style="font-size: 13px; color: var(--text-primary); line-height: 1.8;">
                 <p><strong>Issuer:</strong> DigiCert Global Root CA</p>
                 <p><strong>Valid Until:</strong> Dec 31, 2025</p>
-                <p><strong>Algorithm:</strong> SHA-256 RSA</p>
+                <p><strong>Algorithm:</strong> SHA-256 with RSA</p>
               </div>
             </div>
 
